--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    
+        <script src="conditions.js"></script>
+   <!--<script src="operators.js"></script>-->
 </body>
 </html>
