--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-        <script src="conditions.js"></script>
+    <button></button>
+
+       <!--<script src="conditions.js"></script>-->
    <!--<script src="operators.js"></script>-->
+   <script src="looping.js"></script>
 </body>
 </html>
