--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
        <!--<script src="conditions.js"></script>-->
    <!--<script src="operators.js"></script>-->
-   <script src="looping.js"></script>
+   <!--<script src="looping.js"></script>-->
+   <script src="function.js"></script>
 </body>
 </html>
