--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <button></button>
-
        <!--<script src="conditions.js"></script>-->
    <!--<script src="operators.js"></script>-->
    <!--<script src="looping.js"></script>-->
-   <script src="function.js"></script>
+   <!--<script src="function.js"></script>-->
+   <script src="programs.js"></script>
 </body>
 </html>
