--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-       <!--<script src="conditions.js"></script>-->
-   <!--<script src="operators.js"></script>-->
-   <!--<script src="looping.js"></script>-->
-   <!--<script src="function.js"></script>-->
-   <script src="programs.js"></script>
+        <!--<script src="conditions.js"></script>-->
+            <!--<script src="operators.js"></script>-->
+                <!--<script src="looping.js"></script>-->
+                    <!--<script src="function.js"></script>-->
+                        <!--<script src="programs.js"></script>-->
+                              <script src="arrays.js"></script>
 </body>
 </html>
