--- a/index.html
+++ b/index.html
@@ -4,11 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+       
+        body{
+            width: 100px;
+            height: 100px;
+            margin: 50px 100px;
+        }
+        table{
+            width: 100px;
+
+        }
+        table,th,td{
+            border: 2px solid;
+        }
+        tr:nth-child(even){
+            background-color: blue;
+        }
+
+    </style>
 </head>
 
 <body>
-    <button>submit</button>
-    <h1>JavaScript</h1>
+    <table>
+        <thead>
+            <th>Sno.</th>  
+            <th>Name</th>
+            <th>Email</th>
+            <th>Company</th>
+        </thead>
+        <tbody>
+            <tr>
+                <!-- <td>1</td>
+                <td>vikas</td>
+                <td>vikas@gmail.com</td>
+                <td>xyz</td> -->
+            </tr>
+        </tbody>
+        <tbody id="store">
+           
+        </tbody>
+    </table>
+    <!-- <button>submit</button>
+    <h1>JavaScript</h1> -->
         <!--<script src="conditions.js"></script>-->
             <!--<script src="operators.js"></script>-->
                 <!--<script src="looping.js"></script>-->
