--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <!-- <style>
        
         body{
             width: 100px;
@@ -22,11 +22,11 @@
             background-color: blue;
         }
 
-    </style>
+    </style> -->
 </head>
 
 <body>
-    <table>
+    <!-- <table>
         <thead>
             <th>Sno.</th>  
             <th>Name</th>
@@ -35,24 +35,25 @@
         </thead>
         <tbody>
             <tr>
-                <!-- <td>1</td>
+                <td>1</td>
                 <td>vikas</td>
                 <td>vikas@gmail.com</td>
-                <td>xyz</td> -->
+                <td>xyz</td>
             </tr>
         </tbody>
         <tbody id="store">
            
         </tbody>
-    </table>
-    <!-- <button>submit</button>
-    <h1>JavaScript</h1> -->
+    </table> -->
+    <button>submit</button>
+    <h1>JavaScript</h1>
         <!--<script src="conditions.js"></script>-->
             <!--<script src="operators.js"></script>-->
                 <!--<script src="looping.js"></script>-->
                     <!--<script src="function.js"></script>-->
                         <!--<script src="programs.js"></script>-->
                               <!--<script src="arrays.js"></script>-->
-                                <script src="async.js"></script>
+                                <!-- <script src="async.js"></script> -->
+                                    <script src="dom.js"></script>
 </body>
 </html>
