--- a/dom.html
+++ b/dom.html
@@ -4,17 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #demo{
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <!-- <form>
         <input type="text" placeholder="enter name"
     </form> -->
-    <button>Click</button>
+    <!-- <button>Click</button>
     <button id="demo">Google</button>
     <button>youtube</button>
 
     <div id="test">
+    </div> -->
+    <!-- <div class="test">div1</div>
+    <div class="test">div2</div>
+    <div class="test">div3</div>
+    <p>Lorem5</p>   
+    <span class="test">span tag</span><br> -->
+<!-- 
+    <div class="demo">demo1</div>
+    <div class="demo">demo2</div>
+    <div class="demo">demo3</div> -->
+
+    <!-- <input type="text" name="formdata" value="vikas">
+    <input type="email" name="formdata" value="mr.vikas@gmail.com"><br>
+    <input type="passsword" name="formdata" value="xb4e23">
+    <input type="tel" name="formdata" value="1234567890"> -->
+
+
+    <!-- <h1 id="mru">Malla Reddy University</h1>
+
+    <div class="test">div1</div>
+    <div class="test">div2</div>
+    <div class="test">div3</div>
+
+    <button id="btn">Click</button> -->
+
+    <div id="divBlock">
+
     </div>
+
+    <input type="text" id="inp">
+
+    <div>red</div>
+    <div>blue</div>
+    <div>yellow</div>
+    <div>grey</div>
+
 
 
     <script src="dom.js"></script>
