--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
                         <!--<script src="programs.js"></script>-->
                               <!--<script src="arrays.js"></script>-->
                                 <!-- <script src="async.js"></script> -->
-                                    <script src="dom.js"></script>
+                                    <!-- <script src="dom.js"></script> -->
 </body>
 </html>
