--- a/dom.html
+++ b/dom.html
@@ -44,19 +44,28 @@
 
     <button id="btn">Click</button> -->
 
-    <div id="divBlock">
+    <!-- <div id="divBlock">
 
-    </div>
+    </div> -->
 
-    <input type="text" id="inp">
+    <!-- <input type="text" id="inp">
 
-    <div>red</div>
-    <div>blue</div>
-    <div>yellow</div>
-    <div>grey</div>
+    <div class="bgColor">red</div>
+    <div class="bgColor">blue</div>
+    <div class="bgColor">yellow</div>
+    <div class="bgColor">grey</div> -->
+
+    <form>
+        <input type="text" placeholder="name" id="uName"><br>
+        <input type="email" placeholder="email" id="uEmail"><br>
+        <input type="password" placeholder="password" id="uPass"><br>
+        <input type="submit"><br>
+       
+    </form>        
+
+    
 
 
-
-    <script src="dom.js"></script>
+     <script src="dom.js"></script>
 </body>
 </html>
