--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
            
         </tbody>
     </table> -->
-    <button>submit</button>
-    <h1>JavaScript</h1>
+    <!-- <button>submit</button>
+    <h1>JavaScript</h1> -->
         <!--<script src="conditions.js"></script>-->
             <!--<script src="operators.js"></script>-->
                 <!--<script src="looping.js"></script>-->
